# HaskNixTemplate

./: .gitignore  ChangeLog.md  HaskNixTemplate.cabal  LICENSE  README.md  default.nix  release.nix  shell.nix
